# gf-auth

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
crates/gf-auth/: Cargo.toml
crates/gf-auth-http/: Cargo.toml
crates/gf-auth-http/src/: common.rs  lib.rs  reqwest.rs  ureq.rs
crates/gf-auth-http/src/reqwest/: impl.rs  mod.rs  utils.rs
crates/gf-auth-http/src/ureq/: impl.rs  mod.rs  utils.rs
crates/gf-auth-macros/: Cargo.toml
crates/gf-auth-macros/src/: lib.rs
crates/gf-auth-model/: Cargo.toml
crates/gf-auth-model/src/: identity.rs  lib.rs
crates/gf-auth-model/src/api/: mod.rs
crates/gf-auth-model/src/api/captcha/: mod.rs
crates/gf-auth-model/src/api/gameforge/: mod.rs  request.rs  response.rs
crates/gf-auth-model/src/blackbox/: constants.rs  de.rs  error.rs  mod.rs  ser.rs
crates/gf-auth-model/src/fingerprint/: mod.rs  timings.rs  utils.rs  vector.rs
crates/gf-auth-model/src/fingerprint/vector/: de.rs  mod.rs  ser.rs
crates/gf-auth-traits/: Cargo.toml
crates/gf-auth-traits/src/: lib.rs
crates/gf-auth/resources/: fingerprint1.json  fingerprint2.json
crates/gf-auth/src/: constants.rs  identity.rs  lib.rs
crates/gf-auth/src/blackbox/: fingerprint.rs  mod.rs
crates/gf-auth/src/clients/: mod.rs
crates/gf-auth/src/clients/captcha/: impl.rs  mod.rs
crates/gf-auth/src/clients/gameforge/: impl.rs  mod.rs
crates/gf-auth/src/fingerprint/: mod.rs  vector.rs
crates/gf-auth/src/identity/: mod.rs  model.rs
crates/gf-auth/src/sync/: futures.rs
resources/: ca.pem  client.pem  key.pem
resources/blackbox/: encoded_blackbox.txt  fingerprint_no_request.json  fingerprint_with_request.json
resources/identity/: identity_full.json  identity_only_fingerprint.json
