[package]
name = "gf-auth-http"
version = "0.1.0"
description = "HTTP compatibility layer for gf-auth"
authors = ["Krzysztof Saczuk <me@krzysztofsaczuk.pl>"]
edition = "2021"
homepage = "https://github.com/zakuciael/gf-auth"
repository = "https://github.com/zakuciael/gf-auth"
readme = "../../README.md"
license = "MIT"
categories = ["api-bindings"]
keywords = ["nostale", "gf", "auth", "sdk"]

[dependencies]
async-trait = { version = "0.1.80", optional = true }
log = "0.4.21"
maybe-async = "0.2.10"
serde_json = "1.0.117"
thiserror = "1.0.61"

# Supported clients
reqwest = { version = "0.12.4", default-features = false, features = ["json", "socks", "native-tls"], optional = true }
ureq = { version = "2.9.7", default-features = false, features = ["json", "socks-proxy", "tls", "native-tls"], optional = true }
native-tls = { version = "0.2.11", optional = true }
rustls-pemfile = { version = "2.1.2", optional = true }
rustls = { version = "0.22.4", optional = true }
rustls-native-certs = { version = "0.7.0", optional = true }

[dev-dependencies]
tokio = { version = "1.37.0", default-features = false, features = ["full"] }

[features]
default = ["client-reqwest", "reqwest-default-tls"]

client-ureq = ["ureq", "__sync"]
client-reqwest = ["reqwest", "__async"]

# Passing the TLS features to reqwest.
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-native-tls = ["reqwest/native-tls"]
reqwest-native-tls-vendored = ["reqwest/native-tls-vendored"]
reqwest-rustls-tls = ["reqwest/rustls-tls", "dep:rustls-pemfile"]
# Same for ureq.
ureq-rustls-tls = ["ureq/tls", "dep:rustls", "dep:rustls-pemfile"]
ureq-rustls-tls-native-certs = ["ureq/tls", "ureq/native-certs", "dep:rustls", "dep:rustls-pemfile", "dep:rustls-native-certs"]
ureq-native-tls = ["ureq/native-tls", "dep:native-tls"]

# Internal features for checking async or sync compilation
__async = ["async-trait"]
__sync = ["maybe-async/is_sync"]

[package.metadata.docs.rs]
# We generate the docs for ureq so that the function signatures of the endpoints
# don't look gnarly (because of `async-trait`).
features = ["client-ureq"]
no-default-features = true
